# mcp-incubator

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  python.yml
config/: default.json
scripts/: bot.py
servers/notemcp/: README.md  pyproject.toml
servers/notemcp/src/notemcp/: env.py  server.py
servers/planningmcp/: README.md  pyproject.toml
servers/planningmcp/src/planningmcp/: server.py
servers/planningmcp/tests/: test_plan.py
servers/templatemcp/: README.md  pyproject.toml
src/mcpservers/: bot.py  cli.py  client.py  config.py  models.py  utils.py
src/mcpservers/providers/: __init__.py  azure.py  gemini.py
